[package]
name = "geob"
version = "0.1.0"
edition = "2024"


[features]
# default = ["geo-traits", "sqlite", "rstar", "serde"]
geo-traits = ["dep:geo-traits"]
proj = ["dep:proj"]
sqlite = ["rusqlite"]
rstar = ["dep:rstar", "geo-traits", "dep:geo", "geo-types/rstar_0_12"]
serde = ["dep:serde", "geo-traits", "geo-types/serde"]

[dependencies]
udled = { version = "0.6", features = ["binary"] }
udled-tokenizers = { version = "0.5" }
byteorder = { version = "1.5", default-features = false }

geo-traits = { version = "0.3", features = [
  "geo-types",
], default-features = false, optional = true }
proj = { version = "0.31", features = [
  "pkg_config",
], default-features = false, optional = true }

rusqlite = { version = "0.37", default-features = false, optional = true }
rstar = { version = "0.12", optional = true }

geo = { version = "0.32", optional = true }
geo-types = { version = "0.7", features = [], optional = true }

serde = { version = "1", optional = true }
